# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import referralsRouter from "./referrals";
 import botsRouter from "./bots";
 import adminRouter from "./admin";
 import settingsRouter from "./settings";
+import gamesRouter from "./games";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use("/referrals", referralsRouter);
 router.use("/bots", botsRouter);
 router.use("/admin", adminRouter);
 router.use("/settings", settingsRouter);
+router.use("/games", gamesRouter);
 
 export default router;
